[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=2.0.0"
  ]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["matrixfuncs"]

[project]
name = "matrixfuncs"
dynamic = ["version"]
description = "Provides classes for calculating with krylov spaces and matrix functions"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["krylov", "matrix", "function"]
license = {text = "GPL-3.0-only"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  ]
dependencies = [
  "numpy",
  "scipy",
  "sympy",
  "joblib"
  ]


[project.urls]
"Github" = "https://github.com/nextdorf/matrix-functions"

[tool.setuptools.dynamic]
version = {attr = "matrixfuncs._version.version"}

[tool.setuptools_scm]
write_to = "matrixfuncs/_version.py"


